fix blockquote style

--- a/app/assets/stylesheets/unstructured/_discussions.css.scss
+++ b/app/assets/stylesheets/unstructured/_discussions.css.scss
@@ -419,7 +419,7 @@ body.discussions.show {
 
       .activity-item-header{
         blockquote p {
-          font-size: inherit;
+          font-size: 14px;
           font-weight: inherit;
         }
         blockquote, pre {
