--- a/lineman/app/templates/add_comment.haml
+++ b/lineman/app/templates/add_comment.haml
@@ -1,10 +1,13 @@
 .card-row
   .card
-    %form{name: 'addCommentForm', ng_submit: 'processForm()'}
-      .card-row.fake
-        %input.form-control{placeholder: "Write a comment...", ng_focus: "expand()", id: 'fake_comment_input'}
-      .card-row.real
-        .left
-          %textarea#comment-field.form-control{name: 'body', rows: 5, placeholder: "Say something...", ng_blur: "collapseIfEmpty()", ng_model: 'newComment.body'}
-        .right
-          %button#post-comment-btn.btn.btn-default.btn-block.submit{type: 'submit'} Post
+    .card-left
+      %img{src: 'http://placehold.it/40x40'}
+    .card-right 
+      %form{name: 'addCommentForm', ng_submit: 'processForm()'}
+        .card-row.fake
+          %input.form-control{placeholder: "Write a comment...", ng_focus: "expand()", id: 'fake_comment_input'}
+        .card-row.real
+          .left
+            %textarea#comment-field.form-control{name: 'body', rows: 5, placeholder: "Say something...", ng_blur: "collapseIfEmpty()", ng_model: 'newComment.body'}
+          .right
+            %button#post-comment-btn.btn.btn-default.btn-block.submit{type: 'submit'} Post
