--- a/lineman/app/templates/start_proposal.haml
+++ b/lineman/app/templates/start_proposal.haml
@@ -2,7 +2,7 @@
   .card.cover
     .card-left
       .card-pie-graph-icon
-    .card-right
+    .card-right.card-right-text
       .card-header 
         %h3.no-header-styles Ready to make a decision?
       .card-content
