Starting on proposal card

--- a/app/views/style_guide/discussion.html.haml
+++ b/app/views/style_guide/discussion.html.haml
@@ -26,7 +26,7 @@
               %i.fa.fa-eye
               = t :"common.follow"
 
-      .card.card-thread-context
+      .card.card-thread-context.card-primary
         .card-content
           .card-content-header
             .card-options-menu.pull-right
