--- a/lineman/app/css/card.scss
+++ b/lineman/app/css/card.scss
@@ -45,7 +45,7 @@
     font-size: 14px;
     color: #888888;
     line-height: 20px;
-    margin: 0 0 20px 0;
+    margin: 0;
     padding: 0;
   }
 }
@@ -99,7 +99,7 @@
   line-height: 20px;
 }
 
-.card-thread-context {
+.card-content-primary {
   h1 {
     font-family: HelveticaNeue-Bold;
     font-size: 24px;
