--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -1,9 +1,8 @@
 .container
   .row
     .col-xs-12
-      -# dicussion title, context card
       .card.card-thread-context
-        .card-content
+        .card-content.card-content-primary
           .card-content-header
             .card-options-menu.pull-right
               %i.fa.fa-chevron-down
@@ -14,23 +13,22 @@
             .published-at.card-meta-text
               %abbr.timeago
                 {{discussion.created_at | timeFromNowInWords}}
-
           .card-content-body
             {{ discussion.description}}
 
-
-
-      %proposal{proposal: 'discussion.active_proposal', discussion: 'discussion'}
+      .card.card-thread-items
+        .card-meta-header
+          %h1 Proposal
+          .card-options-menu.pull-right
+            %i.fa.fa-chevron-down
+        .card-content.card-content-primary
+          %proposal{proposal: 'discussion.active_proposal()', discussion: 'discussion'}
 
       .card.card-thread-items
         .card-meta-header
           %h1 Discussion
         .card-content
           %div{ng_repeat: 'event in discussion.events()', ng_include: "safeEvent(event.kind) && 'generated/templates/discussion_items/'+ event.kind + '.html'"}
-          -#-@discussion.items.each do |item|
-            -#= render "style_guide/thread_items/#{item.kind}", item: item
 
       %start_proposal{discussion: 'discussion'}
-
       %add_comment{discussion: 'discussion'}
-
