--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -22,7 +22,7 @@
           .card-options-menu.pull-right
             %i.fa.fa-chevron-down
         .card-content.card-content-primary
-          %proposal{proposal: 'discussion.active_proposal()', discussion: 'discussion'}
+          %proposal{proposal: 'discussion.active_proposal()', discussion: 'discussion', currentUser: 'currentUser'}
 
       .card.card-thread-items
         .card-meta-header
