--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -1,5 +1,4 @@
-/*@import "font-awesome";*/
-@import "bootstrap_overrides";
+@import 'bootstrap_overrides';
 @import 'bootstrap';
 @import 'base';
 @import 'layout';
