--- a/lineman/app/css/card.scss
+++ b/lineman/app/css/card.scss
@@ -1,5 +1,5 @@
 @mixin loomioFont($weight:normal, $style:normal) {
-  font-family: OpenSans;
+  font-family: Open Sans;
   font-weight: $weight;
   font-style: $style;
 }
@@ -30,7 +30,7 @@
   }
   vertical-align: top;
   display: inline-block;
-  padding-left: 15px;
+  padding-left: 10px;
   input {
     height: $small;
     @media(min-width: $screen-sm-min) {
@@ -104,7 +104,7 @@
 }
 
 .card-right {
-  @include cardRight(30px, 40px, 90%, 92%);
+  @include cardRight(30px, 40px, 84%, 91%);
 }
 
 .card-right-small {
@@ -148,10 +148,8 @@
 }
 
 .thread-item-activity-description {
-  margin-left: 40px;
   margin-bottom: 5px;
   @media (min-width: $screen-sm-min) {
-    margin-left: 50px;
     margin-bottom: 4px;
   }
   color: #777;
@@ -285,12 +283,20 @@
 }
 
 .thread-item-author {
-  .author-details {
-    margin-left: 40px;
-    margin-bottom: 10px;
+
+  .author-name-only {
+    .author-name {
+      line-height: 30px;
+      @media (min-width: $screen-sm-min) {
+        line-height: 40px;
+      }
+    }
+  }
+
+  .author-with-text {
+    height: 30px;
     @media (min-width: $screen-sm-min) {
-      margin-left: 50px;
-      margin-bottom: 4px;
+      height: 40px;
     }
   }
 
@@ -305,22 +311,8 @@
     }
   }
 
-  .author-role {
-    font-family: HelveticaNeue;
-    font-size: 12px;
-    color: #777777;
-    line-height: 13px;
-    margin-top: 4px;
-    @media (min-width: $screen-sm-min) {
-      font-size: 14px;
-      line-height: 20px;
-      margin-top: 0;
-      display: inline;
-    }
-  }
-
   .author-statement {
-    font-family: HelveticaNeue;
+    @include loomioFont;
     line-height: 16px;
     padding-left: 8px;
   }
