Make new vote card more better

--- a/lineman/app/templates/discussion_items/new_vote.haml
+++ b/lineman/app/templates/discussion_items/new_vote.haml
@@ -1,10 +1,14 @@
-.thread-item.new_vote{ng_controller: 'NewVoteItemController'}
-  {{vote.author_name()}}
-  .thread-item-vote-icon.pull-left
-    -#.vote-icon{class: vote.position_verb}
-
-  .thread-item-activity-description
-    -#{{ 'new_vote.user_abstained_on_proposal' | translate: voteTranslations }}
-
-  .thread-item-body.thread-item-vote-statement
-    {{ vote.statement }}
+.thread-item{ng_controller: 'NewVoteItemController'}
+  .thread-item-header
+    .thread-item-author
+      .card-left
+        .thread-item-vote-icon.vote-icon
+          .vote-icon-img{ng_class: 'vote.position'}
+      .card-right
+        .author-with-text
+          %span.author-name {{vote.author_name()}} 
+          %span.author-statement voted on the proposal
+  .thread-item-body{ng_show: 'vote.statement'}
+    {{vote.statement}}
+  %abbr.timeago
+    {{vote.created_at | timeFromNowInWords}}
