--- a/lineman/app/css/card.scss
+++ b/lineman/app/css/card.scss
@@ -319,7 +319,7 @@
 }
 
 .thread-item-body {
-  font-family: HelveticaNeue;
+  @include loomioFont;
   font-size: 14px;
   color: #333333;
   line-height: 20px;
@@ -330,7 +330,7 @@
 }
 
 .thread-item-footer {
-  font-family: HelveticaNeue;
+  @include loomioFont;
   font-size: 12px;
   color: #777777;
   line-height: 15px;
