--- a/lineman/app/templates/discussion_items/new_motion.haml
+++ b/lineman/app/templates/discussion_items/new_motion.haml
@@ -2,8 +2,8 @@
   .thread-item-header
     .thread-item-author
       .card-left
-        .thread-item-vote-icon.vote-icon
-          .vote-icon-img.no
+        .thread-item-icon
+          .thread-icon-img.pie
       .card-right
         .author-with-text
           %span.author-name {{proposal.author_name()}} 
