--- a/lineman/app/templates/discussion_items/new_vote.haml
+++ b/lineman/app/templates/discussion_items/new_vote.haml
@@ -2,8 +2,8 @@
   .thread-item-header
     .thread-item-author
       .card-left
-        .thread-item-vote-icon.vote-icon
-          .vote-icon-img{ng_class: 'vote.position'}
+        .thread-item-icon
+          .thread-icon-img{ng_class: 'vote.position'}
       .card-right
         .author-with-text
           %span.author-name {{vote.author_name()}} 
