--- a/lineman/app/css/base.scss
+++ b/lineman/app/css/base.scss
@@ -1,7 +1,13 @@
+
 body {
-  background-color: #ddd
+  background-color: #f1f1f1;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-size: 14px;
+  color: #262626;
+  line-height: 20px;
+  /* I think it would be : */
 }
 
-abbr.timeago {
+.time-ago {
   border: 0;
 }
