--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -2,5 +2,5 @@
 @import 'bootstrap';
 @import 'base';
 @import 'layout';
-@import 'card';
-@import 'card_overrides';
+@import 'thread';
+/*@import 'card_overrides';*/
