--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -1,5 +1,51 @@
 @import 'bootstrap_overrides';
 @import 'bootstrap';
+
+$meta-text-color: #888;
+$thread-border-color: #ddd;
+
+@mixin fontSmall {
+  font-size: 12px;
+  line-height: 14px;
+}
+
+@mixin fontMedium {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+@mixin fontLarge {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+@mixin fontGrande {
+  font-size: 18px;
+  line-height: 20px;
+}
+
+
+@mixin fontHelveticaBold {
+  font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold",
+    "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma",
+    "Geneva", "Arial", sans-serif;
+  font-weight:600;
+  font-stretch:normal;
+}
+
+@mixin fontHelvetica {
+  font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman",
+    "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular',
+    "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+  font-weight:400;
+  font-stretch:normal;
+}
+
+@mixin metaText {
+  color: $meta-text-color;
+  @include fontSmall;
+}
+
 @import 'base';
 @import 'layout';
 @import 'thread';
