--- a/lineman/app/css/base.scss
+++ b/lineman/app/css/base.scss
@@ -1,11 +1,9 @@
 
 body {
+  @include fontHelvetica;
+  @include fontMedium;
   background-color: #f1f1f1;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 14px;
   color: #262626;
-  line-height: 20px;
-  /* I think it would be : */
 }
 
 .time-ago {
