--- a/lineman/app/css/thread.scss
+++ b/lineman/app/css/thread.scss
@@ -1,40 +1,3 @@
-$meta-text-color: #888;
-$thread-border-color: #ddd;
-
-@mixin fontSmall {
-  font-size: 12px;
-  line-height: 14px;
-}
-@mixin fontMainHeadingSize {
-  font-size: 18px;
-  line-height: 20px;
-}
-
-@mixin fontSubHeadingSize {
-  font-size: 16px;
-  line-height: 20px;
-}
-
-@mixin fontHelveticaBold {
-  font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold",
-    "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma",
-    "Geneva", "Arial", sans-serif;
-  font-weight:600;
-  font-stretch:normal;
-}
-
-@mixin fontHelvetica {
-  font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman",
-    "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular',
-    "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-  font-weight:400;
-  font-stretch:normal;
-}
-
-@mixin metaText {
-  color: $meta-text-color;
-  @include fontSmall;
-}
 
 .thread-container {
   border: 1px solid $thread-border-color;
@@ -45,7 +8,7 @@ $thread-border-color: #ddd;
   background-color: #fff;
   h1 {
     @include fontHelveticaBold;
-    @include fontMainHeadingSize;
+    @include fontGrande;
     padding: 0;
     margin: 0;
     color: #333333;
@@ -53,7 +16,6 @@ $thread-border-color: #ddd;
 }
 
 .thread-origin {
-  @include fontHelvetica;
   @include fontSmall;
   color: #777777;
 }
@@ -74,7 +36,7 @@ $thread-border-color: #ddd;
   background-color: #fff;
   border-top: 1px solid $thread-border-color;
   h2 {
-    @include fontSubHeadingSize;
+    @include fontLarge;
     @include fontHelveticaBold;
   }
 }
@@ -101,14 +63,23 @@ $thread-border-color: #ddd;
   margin-bottom: 10px;
 }
 
+.thread-event-body {
+  margin-bottom: 10px;
+}
+
 .thread-comment-author {
+  margin-bottom: 10px;
   .avatar-initials{
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
   }
   .avatar-image img{
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
   }
 
+}
+.thread-comment-author-name {
+  @include fontHelveticaBold;
+  color: #333333;
 }
