--- a/lineman/app/templates/discussion_items/new_vote.haml
+++ b/lineman/app/templates/discussion_items/new_vote.haml
@@ -1,14 +1,10 @@
 -#%span{translate: "new_vote_item.user_agreed", translate_values: '{name: vote.author_name()}'}
-.thread-item{ng_controller: 'NewVoteItemController'}
-  .thread-item-header
-    .thread-item-author
-      .card-left
-        .thread-item-icon
-          .thread-icon-img{ng_class: 'vote.position'}
-      .card-right
-        .author-with-text
-          %span.author-name {{vote.author_name()}}
-          %span.author-statement voted on the proposal
+.thread-event.thread-vote{ng-controller: 'NewVoteItemController'}
+  .media
+    .pull-left.vote-icon{ng-class: 'vote-icon-{{vote.position}}'}
+    .thread-vote-author-action
+      %span.author-name {{vote.authorName()}}
+      %span.author-statement voted on the proposal
   .thread-item-body{ng_show: 'vote.statement'}
     {{vote.statement}}
   .thread-item-footer
