started to rebuild the templates and css

--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -7,3 +7,4 @@
 @import 'module/media';
 @import 'module/card';
 @import 'module/navbar';
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
