--- a/app/views/layouts/style_guide.html.haml
+++ b/app/views/layouts/style_guide.html.haml
@@ -4,7 +4,7 @@
     %meta{charset: 'utf-8'}
     %meta{content: "IE=Edge", "http-equiv" => "X-UA-Compatible"}
     %meta{content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", name: "viewport"}
-    %title a title # md
+    %title Loomio
     = stylesheet_link_tag '1.0/index'
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
