--- a/lineman/app/pages/index.haml
+++ b/lineman/app/pages/index.haml
@@ -1,26 +1,18 @@
 !!!
-%html{'ng-app' => 'loomioApp'}
+%html{lang: 'en', ng_app: 'loomioApp'}
   %head
     %title Loomio
-    %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}/
-    %link{href: '/css/app.css', media: 'screen', rel: 'stylesheet', type: 'text/css'}
-    %link{href: "http://fonts.googleapis.com/css?family=Open+Sans", rel: "stylesheet", type: "text/css"}
     %base{href: '/'}
-
+    %meta{charset: 'utf-8'}
+    %meta{content: "IE=Edge", "http-equiv" => "X-UA-Compatible"}
+    %meta{content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", name: "viewport"}
+    %link{href: '/css/app.css', media: 'screen', rel: 'stylesheet', type: 'text/css'}
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   %body
-    %header#header
-      %nav.navbar.navbar-default.navbar-static-top
-        .container
-          .navbar-header
-            %a.navbar-brand{href: '#'}
-              %img{src: '/img/logo.jpg'}
-            %button.navbar-toggle{"data-target" => ".navbar-ex1-collapse", "data-toggle" => "collapse", type: "button"}
-              %span.sr-only Toggle navigation
-              %span.icon-bar
-              %span.icon-bar
-              %span.icon-bar
-
-    #main-container{'ng-view' => ''}
+    .container{ng_view: ''}
 
     %script{ src: '/js/app.js', type: 'text/javascript'}
     %script{ src: 'http://localhost:9292/faye/client.js', type: 'text/javascript'}
