Add markdown directive for discussion description
Conflicts:
	lineman/app/css/main.scss
	lineman/app/js/models/discussion_model.coffee
	lineman/app/js/models/group_model.coffee
	lineman/app/templates/discussion.haml

--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -13,7 +13,7 @@
               %span{translate: 'discussion.started_by', translate-value-name: '{{discussion.authorName()}}'}
 
           .thread-discussion-context
-            {{discussion.description}}
+            .thread-discussion-description{btf-markdown: 'discussion.description' }
 
           .thread-actions-and-meta
             %a{href: '#', translate: 'common.action.reply'}>
